--- a/ui/nav.module.css
+++ b/ui/nav.module.css
@@ -5,15 +5,27 @@
     @apply [--w:100%] z-1 px-0.5;
   }
 
-  & [data-origin="content"] [data-origin="content"] a {
+  & [data-sheets="trigger-snap"] {
+    & > a {
+      @apply w-full text-left flex flex-row items-center justify-start;
+    }
+    & [data-sheets="trigger"] {
+      @apply [--w:max-content];
+    }
+  }
+
+  & [data-sheets="trigger"] [data-sheets="chevron"] {
+    @apply rounded bg-muted-foreground/10 border border-muted/60 [--sz-icon:1.1875rem];
+  }
+  & [data-sheets="content"] [data-sheets="content"] a {
     @apply capitalize;
   }
-  & [data-origin="content"] [data-origin="root"] [data-origin="trigger"] {
+  & [data-sheets="content"] [data-sheets="root"] [data-sheets="trigger"] {
     @apply pl-1.5;
   }
-  & [data-origin="root"],
-  & [data-origin="trigger"],
-  & [data-origin="content"] {
+  & [data-sheets="root"],
+  & [data-sheets="trigger"],
+  & [data-sheets="content"] {
     @apply border-0 w-[--w,100%];
   }
 }
